# GLLearning

./: .gitignore  README.md  local.properties
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/com/xucz/opengldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLAPI_native.c  GLAPI_native.h  gl_camera_capture_jni.c  gl_camera_capture_jni.h  gl_camera_render_jni.c  gl_camera_render_jni.h  gl_sample_jni.c  gl_sample_jni.h  native-lib.cpp  native_activity_main.c
app/src/main/cpp/1_shape/: Triangle.c  Triangle.h
app/src/main/cpp/2_VBO&VAO/: VAO.c  VBO.c  VBO.h
app/src/main/cpp/camera/: CameraBase.cpp  CameraBase.h  Grid.cpp  Grid.h  LUTFilter.cpp  LUTFilter.h  Normal.cpp  Normal.h  PictInPict.cpp  PictInPict.h  RotateCircle.cpp  RotateCircle.h  ScaleCircle.cpp  ScaleCircle.h  SeparationShift.cpp  SeparationShift.h  SoulOut.cpp  SoulOut.h  SplitScreen.cpp  SplitScreen.h
app/src/main/cpp/chapter2/: Triangle.c
app/src/main/cpp/chapter6/: VAO.c  VBO.c
app/src/main/cpp/common/: ImageUtils.c  ImageUtils.h  esUtil.c  esUtil.h
app/src/main/cpp/samples/: BasicLighting.cpp  BasicLighting.h  Blending.cpp  Blending.h  CoordSystem.cpp  CoordSystem.h  DepthTesting.cpp  DepthTesting.h  EGL.c  EGL.h  FBO.c  FBO.h  Instancing.cpp  Instancing.h  Instancing3D.cpp  Instancing3D.h  Particles.cpp  Particles.h  SkyBox.cpp  SkyBox.h  StencilTesting.cpp  StencilTesting.h  TextureMap.c  TextureMap.h  TransformFeedback.c  TransformFeedback.h  Triangle.c  Triangle.h  VAO.c  VAO.h  VBO.c  VBO.h  YUVTextureMap.c  YUVTextureMap.h
app/src/main/cpp/shape/: Triangle.c  Triangle.h
app/src/main/java/com/xucz/opengldemo/: EGLActivity.java  GLAPI.java  GLRender.java  MApplication.java  MainActivity.java  TouchScaleHelper.java
app/src/main/java/com/xucz/opengldemo/camera/: CameraActivity.java  CameraBase.java  CameraCapture.java  CameraRender.java
app/src/main/java/com/xucz/opengldemo/camera/impl/: Camera2Wrap.java  CameraWrap.java  CameraXWrap.java
app/src/main/java/com/xucz/opengldemo/glsample/: EGLActivity.java  GLRender.java  GLSampleActivity.java
app/src/main/java/com/xucz/opengldemo/jni/: GLCameraCapture.java  GLCameraRender.java  GLSample.java
app/src/main/java/com/xucz/opengldemo/shape/: ShapeSurfaceActivity.java
app/src/main/java/com/xucz/opengldemo/utils/: ImageUtils.java  TouchScaleHelper.java
app/src/main/res/layout/: activity_camera.xml  activity_egl.xml  activity_glsample.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xucz/opengldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
